se agregan proyectos

--- a/Proyectos.html
+++ b/Proyectos.html
@@ -50,8 +50,12 @@
             <h2>Proyecto 3</h2>
             <h3>Descripción:</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque in vero deserunt voluptatum velit cupiditate numquam esse aspernatur recusandae consequatur autem debitis, eveniet sint, placeat aperiam saepe commodi eum ducimus!
-            </p>
+                Se continua con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. en este caso un Changelog
+            </p><a href=https://fededuarte1992.github.io/changelog/ target="_blank">
+                <button>
+                    <h3>Link al proyecto</h3>
+                </button>
+            </a>
         </div>
     </main>
 </body>
