--- a/Proyectos.html
+++ b/Proyectos.html
@@ -79,6 +79,17 @@
                 </button>
             </a>
         </div>
+        <div id="proyecto6">
+            <h2>Proyecto 6</h2>
+            <h3>Descripción:</h3>
+            <p>
+                Se continua con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. Este proyecto está diseñado para presentarle la manipulación básica de DOM y el manejo de eventos en JavaScript.
+            </p><a href="https://fededuarte1992.github.io/Pesta-as/"_blank">
+                <button>
+                    <h3>Link al proyecto</h3>
+                </button>
+            </a>
+        </div>
     </main>
 </body>
 </html>
