--- a/Proyectos.html
+++ b/Proyectos.html
@@ -73,7 +73,7 @@
             <h3>Descripción:</h3>
             <p>
                 Se continua con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. En este proyecto, debe crear un formulario de registro. 
-            </p><a href="https://fededuarte1992.github.io/Registro/target=" _blank">
+            </p><a href=https://fededuarte1992.github.io/Registro/ target="_blank">
                 <button>
                     <h3>Link al proyecto</h3>
                 </button>
