--- a/Proyectos.html
+++ b/Proyectos.html
@@ -69,16 +69,17 @@
             </a>
         </div>
         <div id="proyecto5">
-            <h2>Proyecto 5</h2>
-            <h3>Descripción:</h3>
-            <p>
-                Se continua con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. En este proyecto, debe crear un formulario de registro. 
-            </p><a href="https://fededuarte1992.github.io/Registro/"_blank">
-                <button>
-                    <h3>Link al proyecto</h3>
-                </button>
-            </a>
-        </div>
+    <h2>Proyecto 5</h2>
+    <h3>Descripción:</h3>
+    <p>
+        Se continúa con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. En este proyecto, debe crear un formulario de registro.
+    </p>
+    <a href="https://fededuarte1992.github.io/Registro/" target="_blank">
+        <button>
+            <h3>Link al proyecto</h3>
+        </button>
+    </a>
+</div>
         <div id="proyecto6">
             <h2>Proyecto 6</h2>
             <h3>Descripción:</h3>
