--- a/Proyectos.html
+++ b/Proyectos.html
@@ -91,6 +91,18 @@
                 </button>
             </a>
         </div>
+
+         <div id="proyecto7">
+            <h2>Proyecto 7</h2>
+            <h3>Descripción:</h3>
+            <p>
+                Se continua con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. Este proyecto está diseñado para presentarle la manipulación básica de DOM y el manejo de eventos en JavaScript.
+            </p><a href="https://fededuarte1992.github.io/Ventana-de-cookies/"_blank">
+                <button>
+                    <h3>Link al proyecto</h3>
+                </button>
+            </a>
+        </div>
     </main>
 </body>
 </html>
