actualizacion id a class

--- a/Proyectos.html
+++ b/Proyectos.html
@@ -22,87 +22,70 @@
     <main>
         <h1>Proyectos</h1>
 
-        <div id="proyecto1">
+        <div class="proyecto">
             <h2>Proyecto 1</h2>
             <h3>Descripción:</h3>
             <p>Este proyecto es un HTML básico sobre un CV.</p>
             <a href="https://fededuarte1992.github.io/proyectoCV/" target="_blank">
-                <button>
-                    <h3>Link al proyecto</h3>
-                </button>
+                <button>Link al proyecto</button>
             </a>
         </div>
 
-        <div id="proyecto2">
+        <div class="proyecto">
             <h2>Proyecto 2</h2>
             <h3>Descripción:</h3>
-            <p>
-                Se continua con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh
-            </p>
-            <a href=https://fededuarte1992.github.io/portafolio1/ target="_blank">
-                <button>
-                    <h3>Link al proyecto</h3>
-                </button>
+            <p>Se continúa con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh.</p>
+            <a href="https://fededuarte1992.github.io/portafolio1/" target="_blank">
+                <button>Link al proyecto</button>
             </a>
         </div>
 
-        <div id="proyecto3">
+        <div class="proyecto">
             <h2>Proyecto 3</h2>
             <h3>Descripción:</h3>
-            <p>
-                Se continua con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. en este caso un Changelog
-            </p><a href=https://fededuarte1992.github.io/changelog/ target="_blank">
-                <button>
-                    <h3>Link al proyecto</h3>
-                </button>
-            </a>
-        </div>
-        <div id="proyecto4">
-            <h2>Proyecto 4</h2>
-            <h3>Descripción:</h3>
-            <p>
-                Se continua con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. En este proyecto, debe crear un montón de tarjetas testimoniales. 
-            </p><a href=https://fededuarte1992.github.io/Tarjetas/ target="_blank">
-                <button>
-                    <h3>Link al proyecto</h3>
-                </button>
-            </a>
-        </div>
-        <div id="proyecto5">
-    <h2>Proyecto 5</h2>
-    <h3>Descripción:</h3>
-    <p>
-        Se continúa con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. En este proyecto, debe crear un formulario de registro.
-    </p>
-    <a href="https://fededuarte1992.github.io/Registro/" target="_blank">
-        <button>
-            <h3>Link al proyecto</h3>
-        </button>
-    </a>
-</div>
-        <div id="proyecto6">
-            <h2>Proyecto 6</h2>
-            <h3>Descripción:</h3>
-            <p>
-                Se continua con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. Este proyecto está diseñado para presentarle la manipulación básica de DOM y el manejo de eventos en JavaScript.
-            </p><a href="https://fededuarte1992.github.io/Pesta-as/"_blank">
-                <button>
-                    <h3>Link al proyecto</h3>
-                </button>
+            <p>Se continúa con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. En este caso, un Changelog.</p>
+            <a href="https://fededuarte1992.github.io/changelog/" target="_blank">
+                <button>Link al proyecto</button>
             </a>
         </div>
 
-         <div id="proyecto7">
-            <h2>Proyecto 7</h2>
+        <div class="proyecto">
+            <h2>Proyecto 4</h2>
             <h3>Descripción:</h3>
-            <p>
-                Se continua con el código HTML conforme a la guía de aprendizaje propuesta por roadmap.sh. Este proyecto está diseñado para presentarle la manipulación básica de DOM y el manejo de eventos en JavaScript.
-            </p><a href="https://fededuarte1992.github.io/Ventana-de-cookies/"_blank">
-                <button>
-                    <h3>Link al proyecto</h3>
-                </button>
+            <p>Se continúa con la guía de roadmap.sh. En este proyecto, se crean tarjetas testimoniales.</p>
+            <a href="https://fededuarte1992.github.io/Tarjetas/" target="_blank">
+                <button>Link al proyecto</button>
             </a>
         </div>
+
+        <div class="proyecto">
+            <h2>Proyecto 5</h2>
+            <h3>Descripción:</h3>
+            <p>Se crea un formulario de registro como parte del aprendizaje de roadmap.sh.</p>
+            <a href="https://fededuarte1992.github.io/Registro/" target="_blank">
+                <button>Link al proyecto</button>
+            </a>
+        </div>
+
+        <div class="proyecto">
+            <h2>Proyecto 6</h2>
+            <h3>Descripción:</h3>
+            <p>Manipulación básica del DOM y eventos en JavaScript.</p>
+            <a href="https://fededuarte1992.github.io/Pesta-as/" target="_blank">
+                <button>Link al proyecto</button>
+            </a>
+        </div>
+
+        <div class="proyecto">
+            <h2>Proyecto 7</h2>
+            <h3>Descripción:</h3>
+            <p>Otro proyecto de manipulación del DOM y eventos en JavaScript.</p>
+            <a href="https://fededuarte1992.github.io/Ventana-de-cookies/" target="_blank">
+                <button>Link al proyecto</button>
+            </a>
+        </div>
+
     </main>
 </body>
 </html>
+
